assets/infrastructure/manifests/keycloak/keycloak-HTTPRoute.yaml
---
# This points at Keycloak's insecure endpoint
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-int
  namespace: ${KEYCLOAK_NAMESPACE}
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: ${ENVOY_GATEWAY_NAMESPACE}
    sectionName: https-terminate
  hostnames:
  - "keycloak.${BASE_PUBLIC_HTTPS_DOMAIN}"
  rules:
  - backendRefs:
    - name: keycloak
      # HTTP (not HTTPS) because we terminate on Envoy Gateway
      port: 8080
