assets/infrastructure/manifests/keycloak/keycloak-TLSRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: keycloak-ext
  namespace: ${KEYCLOAK_NAMESPACE}
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: ${ENVOY_GATEWAY_NAMESPACE}
    sectionName: tls-passthrough
  hostnames:
  - "keycloak.${BASE_EXT_DOMAIN}"  # The SNI hostname to look for
  rules:
  - backendRefs:
    - name: keycloak
      port: 8443  # The port on your pod where TLS is terminated
